# file-extender

./: Cargo.toml
src/: cli.rs  lib.rs  main.rs  walker.rs
