[package]
name = "file-extender"
version = "0.1.0"
authors = ["Eric Rochester <erochest@gmail.com>"]
description = "Walks over a directory tree, calls `file` on each file, copies it into a new location with an appropriate extension."

[dependencies]
clap = "2.31.1"
failure = "0.1.1"
failure_derive = "0.1.1"
magic = "0.12.2"
